--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prettier": "^3.3.3",
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
     "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^9.11.1",
+    "eslint-plugin-vue": "^9.28.0",
+    "globals": "^15.9.0",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
