--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.11.1",
     "eslint-plugin-vue": "^9.28.0",
     "globals": "^15.9.0",
+    "sass": "^1.79.4",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
