--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "prettier": "^3.3.3",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
