--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "prettier": "^3.3.3",
     "vue": "^3.4.29",
     "vue-toastification": "^2.0.0-rc.5"
